# ubiquity

./: .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  build.sh  package-lock.json  rust-toolchain  rust-toolchain.toml  ubiquity.desktop
frontend/: Cargo.toml  Trunk.toml  index.android.html  index.desktop.html  index.html  index.web.html  index_desktop.html  index_web.html  package.json  tailwind.config.js
frontend/css/: collapsible.css  fonts.css  input.css  scrollbar.css  textarea.css
frontend/locale/: strings.ron
frontend/src/: main.rs
frontend/src/components/: btn.rs  container.rs  divider.rs  dog.rs  drawer.rs  dropdown.rs  dual_view.rs  footer.rs  header.rs  link_btn.rs  markdown.rs  markdown_input.rs  markdown_preview.rs  mod.rs  modal.rs  modals.rs  pdf.rs  single_view.rs  theme_card.rs  toasts.rs  tooltip.rs  welcome_hero.rs
frontend/src/components/editor/: editor.rs  mod.rs
frontend/src/components/editor/header/: add.rs  bold.rs  font_decrease.rs  font_increase.rs  formatting.rs  header.rs  headings.rs  image.rs  italics.rs  link.rs  mod.rs  quote.rs  redo.rs  table.rs  undo.rs
frontend/src/components/editor/textarea/: mod.rs  textarea.rs
frontend/src/components/header/: add_dropdown.rs  desktop.rs  header.rs  mobile.rs  mod.rs  save_btn.rs
frontend/src/components/modals/: add_image.rs  add_link.rs  create_file.rs  file_name.rs  mod.rs  modals.rs  table.rs  utils.rs
frontend/src/contexts/: config.rs  markdown.rs  mod.rs  modals.rs  theme.rs  toasts.rs
frontend/src/icons/: mod.rs
frontend/src/pages/: about.rs  background.rs  home.rs  mod.rs  settings.rs  welcome.rs
frontend/src/strings/: strings.ron
frontend/src/tauri/: mod.rs
release/: install.sh  ubiquity  ubiquity.desktop
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ubi-crates/config/: Cargo.toml
ubi-crates/config/src/: error.rs  lib.rs
ubi-crates/error/: Cargo.toml
ubi-crates/error/src/: lib.rs
ubi-crates/md/: Cargo.toml
ubi-crates/md/src/: lib.rs
ubi-crates/mdtg/: Cargo.toml  LICENCE
ubi-crates/mdtg/src/: gen.rs  lib.rs  parse.rs  tokenize.rs
ubi-crates/tauri-sys/: Cargo.toml  README.md
ubi-crates/tauri-sys/src/: app.js  app.rs  cli.js  clipboard.js  clipboard.rs  dialog.js  dialog.rs  error.rs  event.js  event.rs  fs.js  globalShortcut.js  global_shortcut.rs  http.js  index.js  lib.rs  mocks.js  mocks.rs  notification.js  notification.rs  os.js  os.rs  path.js  path.rs  process.js  process.rs  shell.js  tauri.js  tauri.rs  updater.js  updater.rs  window.js  window.rs
