[workspace]
members = ["src-tauri", "frontend", "ubi-crates/*"]

[workspace.package]
version = "0.4.0"
authors = ["Stephen Power"]
description = "A cross-platform markdown editor."
license = "GPL"
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[workspace.dependencies]
ron = "0.8"
serde = { version = "1.0.154", features = ["derive"] }
log = { version = "0.4", features = ["release_max_level_info"] }
walkdir = "2.3.2"
thiserror = "1.0.38"
dirs = "5.0.0"
getrandom = { version = "0.2.8", features = ["js"] }
markdown = "1.0.0-alpha.10"
urlencoding = "2.1.2"
config = { path = "./ubi-crates/config" }
error = { path = "./ubi-crates/error" }
md = { path = "./ubi-crates/md" }
mdtg = { path = "./ubi-crates/mdtg" }
tauri-sys = { git = "https://github.com/opensourcecheemsburgers/tauri-sys" , features=["tauri", "clipboard"] }