[package]
name = "frontend"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
web-sys = { workspace = true }

config = { workspace = true }
error = { workspace = true }

yew = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.34"
getrandom = { workspace = true }
markdown = { workspace = true }

# tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }
tauri-sys = { git = "https://github.com/bicarlsen/tauri-sys.git", branch = "fs", features = [
    "all",
] }

wasm-logger = "0.2.0"
yew-router = "0.17.0"
