[package]
name = "frontend"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
# strip = true

[features]
desktop = []

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies]
time = { version = "0.3.15", features = ["wasm-bindgen"] }
serde_json = "1.0.96"

serde = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
web-sys = { workspace = true }

config = { workspace = true }
error = { workspace = true }

yew = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.34"
getrandom = { workspace = true }
markdown = { workspace = true }
urlencoding = { workspace = true }

rfd="0.10"

tauri-sys = { git = "https://github.com/bicarlsen/tauri-sys.git", branch = "fs", features = [
    "all",
] }

undo = "0.49.0"

wasm-logger = "0.2.0"
yew-router = "0.17.0"