[package]
name = "frontend"
version = "0.0.1"
edition = "2021"

[features]
web = []
desktop = []
mobile = []

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[dependencies]

serde = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

config = { workspace = true }
error = { workspace = true }
md = { workspace = true }
mdtg = { workspace = true }


web-sys = { version = "0.3.63", features=["DataTransfer", "Element", "Navigator", "HtmlAnchorElement", "HtmlButtonElement", "HtmlDialogElement", "Navigator", "Clipboard",
"HtmlDivElement", "HtmlDocument", "HtmlInputElement", "HtmlLabelElement", "HtmlTextAreaElement", "HtmlParagraphElement", "Event", "EventTarget", "MouseEvent", "InputEvent", "KeyEvent", "KeyboardEvent", "KeyboardEventInit",
"TouchEvent", "TouchList", "Touch", "DomTokenList"]}
wasm-bindgen = "=0.2.86"
wasm-bindgen-cli = "=0.2.86"
wasm-bindgen-futures = "=0.4.36"
js-sys = "0.3.63"
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.1"

yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8"
gloo-timers = { version = "0.2.6", features = ["futures"] }

getrandom = { workspace = true }
markdown = { workspace = true }
urlencoding = { workspace = true }

tauri-sys = { workspace = true }

undo = "0.49.0"
regex = "1.8.4"
lazy_static = "1.4.0"

wasm-logger = "0.2.0"
yew-router = "0.17.0"