[package]
name = "Ubiquity"
license = "GPL"
repository = ""
default-run = "Ubiquity"
edition = "2021"
version = "0.3.0"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies.tauri]
version = "1.4.0"
features = []

[dependencies]
serde = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }
error = { workspace = true }
md = { workspace = true }

window-vibrancy = "0.3.2"
window-shadows = "0.2.1"
rfd = "0.10.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
