[package]
name = "config"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
toml = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
error = { workspace = true }
thiserror = { workspace = true }