[package]
name = "config"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ron = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
error = { workspace = true }