[package]
name = "error"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
gloo = "0.8"
ron = { workspace = true }
serde = { workspace = true }

tauri-sys = { git = "https://github.com/bicarlsen/tauri-sys.git", branch = "fs", features = [
    "all",
] }
