[package]
name = "tauri-sys"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
futures = { version = "0.3.25", optional = true }
js-sys = "0.3.59"
log = "0.4.17"
semver = {version = "1.0.14", optional = true, features = ["serde"]}
serde = {version = "1.0.140", features = ["derive"]}
serde-wasm-bindgen = "0.4.3"
thiserror = "1.0.37"
url = {version = "2.3.1", optional = true, features = ["serde"]}
wasm-bindgen = {version = "0.2.86", features = ["serde_json"]}
wasm-bindgen-futures = "0.4.36"

[features]
all = ["app", "clipboard", "event", "mocks", "tauri", "window", "process", "dialog", "os", "notification", "path", "updater", "global_shortcut"]
app = ["dep:semver"]
clipboard = []
dialog = []
event = ["dep:futures"]
global_shortcut = []
mocks = []
notification = []
os = []
path = []
process = []
tauri = ["dep:url"]
updater = ["dep:futures", "event"]
window = ["dep:futures", "event"]
